Fix for 'wss' scheme.
This commit changes the representation of the webservice address from URL to URI. That works around the issue that the Java URL implementation does not recognize the 'wss' scheme used for websockets.